force-app/main/default/objects/Packages__c/Packages__c.object-meta.xml
<CustomObject>
    <label>Intranet Package View</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intranet Packages View</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>