force-app/main/default/objects/Packages__c/fields/Age_of_account__c.field-meta.xml
<CustomField>
    <fullName>Age_of_account__c</fullName>
    <formula>Account__r.Age_of_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of account</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>