force-app/main/default/objects/Packages__c/fields/Anticipated_end_of_package__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_end_of_package__c</fullName>
    <label>Anticipated end of package</label>
    <type>Date</type>
</CustomField>