force-app/main/default/objects/Packages__c/fields/Asia__c.field-meta.xml
<CustomField>
    <fullName>Asia__c</fullName>
    <formula>IF(text(Opportunity__r.Territory__c) =&quot;Pan-Asia&quot;  ||  text(Opportunity__r.Territory__c) =&quot;China&quot;|| text( Opportunity__r.Territory__c )   =&quot;India&quot;, &quot;Asia&quot;, &quot;Not Asia&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asia</label>
    <type>Text</type>
</CustomField>