force-app/main/default/objects/Packages__c/fields/AUM__c.field-meta.xml
<CustomField>
    <fullName>AUM__c</fullName>
    <formula>Account__r.AUM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>