force-app/main/default/objects/Packages__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark this if the package is closed</description>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>