force-app/main/default/objects/Packages__c/fields/Exp_Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exp_Run_Rate__c</fullName>
    <formula>Opportunity__r.Monthly_Run_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exp Run Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>