force-app/main/default/objects/Packages__c/fields/Expiring__c.field-meta.xml
<CustomField>
    <fullName>Expiring__c</fullName>
    <formula>IF( Closed__c = FALSE,

  If( Hours_Remaining__c        &lt;=     6  ||   End_Date__c   &lt;=  TODAY()-365  ||  End_Date__c   &lt;=  TODAY()+30, 
  IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 10, 10),
  IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 10, 10)),
&quot;Closed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiring</label>
    <type>Text</type>
</CustomField>