force-app/main/default/objects/Packages__c/fields/First_Signed__c.field-meta.xml
<CustomField>
    <fullName>First_Signed__c</fullName>
    <formula>Account__r.Date_First_Signed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Signed With TB</label>
    <type>Date</type>
</CustomField>