force-app/main/default/objects/Packages__c/fields/Flag_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Flag_Indicator__c</fullName>
    <formula>CASE(Type__c,

&quot;Forum New Renewal&quot;,IF(End_Date__c  &lt;   TODAY()-30, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15),IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 15, 15)),
&quot;Forum Renewal&quot;,IF(End_Date__c  &lt;   TODAY()-30, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15),IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 15, 15)),

&quot;Forum New-New&quot;,IF(End_Date__c  &lt;   TODAY()-30, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15),IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 15, 15)),

&quot;Connections New&quot;,IF( Anticipated_end_of_package__c    &gt;    End_Date__c , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15) , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 15, 15)),

&quot;Connections Renewal (&gt;12m)&quot;,IF( Anticipated_end_of_package__c    &gt;    End_Date__c , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15) , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 15, 15)),

&quot;Connections New-Renewal (&lt;12m)&quot;,IF( Anticipated_end_of_package__c    &gt;    End_Date__c , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15) , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 15, 15)),

IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 15, 15),

NULL, IF(Anticipated_end_of_package__c   &lt;   TODAY()-30, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15),IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 15, 15))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delayed Deal?</label>
    <type>Text</type>
</CustomField>