force-app/main/default/objects/Packages__c/fields/Hours_Used__c.field-meta.xml
<CustomField>
    <fullName>Hours_Used__c</fullName>
    <formula>Initial_Hours__c - Hours_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>