force-app/main/default/objects/Packages__c/fields/Initial_Hours__c.field-meta.xml
<CustomField>
    <fullName>Initial_Hours__c</fullName>
    <label>Initial Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>