force-app/main/default/objects/Packages__c/fields/Intranet_Package_ID__c.field-meta.xml
<CustomField>
    <fullName>Intranet_Package_ID__c</fullName>
    <externalId>true</externalId>
    <label>Intranet Package ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>