force-app/main/default/objects/Packages__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <formula>Case(   Opportunity__r.Type   ,
&quot;Forum New-New&quot;, 0,
&quot;Forum New Renewal&quot;, 0,
&quot;Forum Renewal&quot;, 0,


Case (  CurrencyIsoCode  , 
&quot;USD&quot;, IF( Asia__c   &lt;&gt;&quot;Asia&quot;, 1300, 900), 
&quot;EUR&quot;, 1050, 
&quot;GBP&quot;, 850, 
&quot;CNY&quot;, 5000, 0)
)</formula>
    <label>List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>