force-app/main/default/objects/Packages__c/fields/Min_Approved_Renewal_Price__c.field-meta.xml
<CustomField>
    <fullName>Min_Approved_Renewal_Price__c</fullName>
    <formula>List_Price__c -( List_Price__c  * Max_Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Approved Renewal Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>