force-app/main/default/objects/Packages__c/fields/Monthly_run_rate_last_60_days__c.field-meta.xml
<CustomField>
    <fullName>Monthly_run_rate_last_60_days__c</fullName>
    <label>Monthly run rate (last 60 days)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>