force-app/main/default/objects/Packages__c/fields/Monthly_UoC_Staffing__c.field-meta.xml
<CustomField>
    <fullName>Monthly_UoC_Staffing__c</fullName>
    <label>Monthly UoC Staffing</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>