force-app/main/default/objects/Packages__c/fields/Months_Package_Active__c.field-meta.xml
<CustomField>
    <fullName>Months_Package_Active__c</fullName>
    <formula>If(ROUND((TODAY()- Start_Date__c )/30,1)&gt;0,ROUND((TODAY()- Start_Date__c )/30,1),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Package Active</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>