force-app/main/default/objects/Packages__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>