force-app/main/default/objects/Packages__c/fields/Oppty_Currency__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Currency__c</fullName>
    <formula>text(Opportunity__r.CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Currency</label>
    <type>Text</type>
</CustomField>