force-app/main/default/objects/Packages__c/fields/Pack_Duration_INT__c.field-meta.xml
<CustomField>
    <fullName>Pack_Duration_INT__c</fullName>
    <description>The package duration from the package pipeline report in the intranet. Based on Closed date.</description>
    <label>Pack Duration - INT</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>