force-app/main/default/objects/Packages__c/fields/Package_Duration__c.field-meta.xml
<CustomField>
    <fullName>Package_Duration__c</fullName>
    <formula>IF( 
OR(ISBLANK(End_Date__c ),ISBLANK(Start_Date__c)) , 
null, 
round((End_Date__c-Start_Date__c)/30,1) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>