force-app/main/default/objects/Packages__c/fields/Package_Owner__c.field-meta.xml
<CustomField>
    <fullName>Package_Owner__c</fullName>
    <label>Package Owner</label>
    <length>250</length>
    <type>Text</type>
</CustomField>