force-app/main/default/objects/Packages__c/fields/Package_owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Package_owner_ID__c</fullName>
    <externalId>true</externalId>
    <label>Package owner ID</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>