force-app/main/default/objects/Packages__c/fields/Package_Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Package_Run_Rate__c</fullName>
    <formula>Hours_Used__c /  Months_Package_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Run Rate (Package to date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>