force-app/main/default/objects/Packages__c/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <label>Package Type</label>
    <length>6</length>
    <type>Text</type>
</CustomField>