force-app/main/default/objects/Packages__c/fields/Price_Flag__c.field-meta.xml
<CustomField>
    <fullName>Price_Flag__c</fullName>
    <formula>IF( Price_Per_Hour__c  &lt;    Min_Approved_Renewal_Price__c , 
    IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 10, 10),IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 10, 10))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Flag</label>
    <type>Text</type>
</CustomField>