force-app/main/default/objects/Packages__c/fields/Price_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Hour__c</fullName>
    <formula>Opportunity__r.Price_per_hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Per Hour (Oppty)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>