force-app/main/default/objects/Packages__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>