force-app/main/default/objects/Packages__c/fields/TAS_Total__c.field-meta.xml
<CustomField>
    <fullName>TAS_Total__c</fullName>
    <formula>Account__r.Total_TAS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAS Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>