force-app/main/default/objects/Packages__c/fields/Total_TB_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_TB_Spend__c</fullName>
    <formula>Account__r.Total_spend_with_CL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total TB Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>