force-app/main/default/objects/Packages__c/fields/Trickle__c.field-meta.xml
<CustomField>
    <fullName>Trickle__c</fullName>
    <formula>text(Opportunity__r.SyncedQuote.Spotlight_Discussions1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trickle</label>
    <type>Text</type>
</CustomField>