force-app/main/default/objects/Packages__c/fields/USD_Price__c.field-meta.xml
<CustomField>
    <fullName>USD_Price__c</fullName>
    <formula>Case ( Region__c , 
&quot;China&quot;, 600,
&quot;Pan Asia&quot;, 900,
1300)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USD Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>