force-app/main/default/objects/Packages__c/listViews/All_Packages.listView-meta.xml
<ListView>
    <fullName>All_Packages</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Initial_Hours__c</columns>
    <columns>Hours_Remaining__c</columns>
    <columns>Exp_Run_Rate__c</columns>
    <columns>Monthly_run_rate_last_60_days__c</columns>
    <columns>Flag_Indicator__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Price_Per_Hour__c</columns>
    <columns>Min_Approved_Renewal_Price__c</columns>
    <columns>End_Date__c</columns>
    <columns>Anticipated_end_of_package__c</columns>
    <columns>Type__c</columns>
    <columns>Region__c</columns>
    <columns>Industry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Packages</label>
    <language>en_US</language>
</ListView>