force-app/main/default/objects/Packages__c/listViews/Expired_packges.listView-meta.xml
<ListView>
    <fullName>Expired_packges</fullName>
    <columns>Expiring__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>End_Date__c</columns>
    <columns>Anticipated_end_of_package__c</columns>
    <columns>Initial_Hours__c</columns>
    <columns>Hours_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Hours_Remaining__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>greaterOrEqual</operation>
        <value>Connections</value>
    </filters>
    <filters>
        <field>Closed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Expired Packages with Hours Remaining</label>
    <language>en_US</language>
</ListView>