force-app/main/default/objects/Packages__c/listViews/Packages_expiring_in_next_30_days.listView-meta.xml
<ListView>
    <fullName>Packages_expiring_in_next_30_days</fullName>
    <columns>Expiring__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>End_Date__c</columns>
    <columns>Anticipated_end_of_package__c</columns>
    <columns>Initial_Hours__c</columns>
    <columns>Hours_Remaining__c</columns>
    <columns>Flag_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <filters>
        <field>Anticipated_end_of_package__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Hours_Remaining__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Closed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Expired or Expiring Packages</label>
    <language>en_US</language>
</ListView>