force-app/main/default/objects/Packages__c/listViews/Packages_with_No_Oppty.listView-meta.xml
<ListView>
    <fullName>Packages_with_No_Oppty</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Package_Type__c</columns>
    <columns>Package_Owner__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>Temporary</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Packages with No Oppty</label>
    <language>en_US</language>
    <sharedTo>
        <role>Sales_Support</role>
    </sharedTo>
</ListView>