force-app/main/default/objects/Packages__c/listViews/Pricing_Issues.listView-meta.xml
<ListView>
    <fullName>Pricing_Issues</fullName>
    <columns>Price_Flag__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Min_Approved_Renewal_Price__c</columns>
    <columns>Price_Per_Hour__c</columns>
    <columns>Flag_Indicator__c</columns>
    <columns>Expiring__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Price_Flag__c</field>
        <operation>contains</operation>
        <value>yellow</value>
    </filters>
    <label>Pricing Issues</label>
    <language>en_US</language>
    <sharedTo>
        <role>Global_Sales_Head</role>
    </sharedTo>
</ListView>